--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,6 +43,8 @@
         android:background="#eee"
         android:editable="false"
         android:layout_marginLeft="25dp"
+        android:textSize="30dp"
+        android:textAlignment="center"
         app:layout_constraintTop_toTopOf="@+id/editText1"
         app:layout_constraintLeft_toRightOf="@+id/editText1" />
 
@@ -75,7 +77,7 @@
         android:background="#03A9F4"
         android:gravity="center"
         android:text="陈"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -107,6 +109,8 @@
         android:background="#eee"
         android:editable="false"
         android:layout_marginLeft="25dp"
+        android:textAlignment="center"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="@+id/editText2"
         app:layout_constraintLeft_toRightOf="@+id/editText2"
         />
@@ -115,13 +119,13 @@
         android:id="@+id/editText2"
         android:layout_width="70dp"
         android:layout_height="90dp"
-        android:background="#F1D06D"
-        android:text="李"
-        android:gravity="center"
-        android:textSize="24sp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText1"
+        android:background="#F1D06D"
+        android:gravity="center"
+        android:text="李"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="@+id/editText1"
+        app:layout_constraintTop_toBottomOf="@+id/editText1"
 
         />
 
@@ -132,6 +136,8 @@
         android:background="#eee"
         android:editable="false"
         android:layout_marginLeft="25dp"
+        android:textAlignment="center"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="@+id/editText4"
         app:layout_constraintLeft_toRightOf="@+id/editText4" />
 
@@ -139,25 +145,25 @@
         android:id="@+id/editText3"
         android:layout_width="70dp"
         android:layout_height="90dp"
-        android:background="#A469AE"
-        android:text="卢"
-        android:gravity="center"
-        android:textSize="24sp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintLeft_toLeftOf="@+id/editText2" />
+        android:background="#A469AE"
+        android:gravity="center"
+        android:text="卢"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <EditText
         android:id="@+id/editText4"
         android:layout_width="70dp"
         android:layout_height="90dp"
-        android:background="#C8EE9C"
-        android:text="石"
-        android:gravity="center"
-        android:textSize="24sp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        app:layout_constraintLeft_toLeftOf="@+id/editText3" />
+        android:background="#C8EE9C"
+        android:gravity="center"
+        android:text="石"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
     <EditText
         android:id="@+id/editText13"
@@ -166,6 +172,8 @@
         android:background="#eee"
         android:editable="false"
         android:layout_marginLeft="25dp"
+        android:textAlignment="center"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="@+id/editText3"
         app:layout_constraintLeft_toRightOf="@+id/editText3" />
 
@@ -176,6 +184,7 @@
         android:background="#eee"
         android:editable="false"
         android:layout_marginLeft="1dp"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="@+id/editText11"
         app:layout_constraintLeft_toRightOf="@+id/editText11" />
 
@@ -186,6 +195,7 @@
         android:background="#eee"
         android:editable="false"
         android:layout_marginLeft="1dp"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="@+id/editText12"
         app:layout_constraintLeft_toRightOf="@+id/editText12" />
 
@@ -196,6 +206,7 @@
         android:background="#eee"
         android:editable="false"
         android:layout_marginLeft="1dp"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="@+id/editText13"
         app:layout_constraintLeft_toRightOf="@+id/editText13" />
 
@@ -205,6 +216,7 @@
         android:layout_height="90dp"
         android:background="#eee"
         android:editable="false"
+        android:textSize="30dp"
         android:layout_marginLeft="1dp"
         app:layout_constraintTop_toTopOf="@+id/editText14"
         app:layout_constraintLeft_toRightOf="@+id/editText14" />
